--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -1,5 +1,3 @@
-
-
 body{
     background: $gray;
     color:$white;
@@ -274,33 +272,47 @@ body{
 
                 & .project-website{
                     position: absolute;
-                    bottom: 10px;
-                    left: 30%;
+                    bottom: 250px;
+                    left: 50%;
                     transform: translateX(-50%);
-                    background-color: rgba(255, 255, 0, 0.8); // Hafif şeffaf sarı buton
-                    color: black;
+                    // background-color: rgba(255, 255, 0, 0.8); // Hafif şeffaf sarı buton
+                    // color: black;
+                    color: $white;
+                    border-bottom: 3px solid $yellow;
                     padding: 0.5rem 1rem;
                     font-size: 14px;
                     font-weight: bold;
-                    border-radius: 8px;
                     text-decoration: none;
                     opacity: 0; // Başlangıçta görünmez
                     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+                    &:hover{
+                        font-size: 16px;
+                        font-weight: bolder;
+                        transition: all ease-in .2s;
+                    }
                 }
                 & .project-link {
                     position: absolute;
-                    bottom: 10px;
-                    left: 70%;
+                    bottom: 200px;
+                    left: 50%;
                     transform: translateX(-50%);
-                    background-color: rgba(255, 255, 0, 0.8); // Hafif şeffaf sarı buton
-                    color: black;
+                    // background-color: rgba(255, 255, 0, 0.8); // Hafif şeffaf sarı buton
+                    // color: black;
+                    color: $white;
+                    border-bottom: 3px solid $yellow;
                     padding: 0.5rem 1rem;
                     font-size: 14px;
                     font-weight: bold;
-                    border-radius: 8px;
                     text-decoration: none;
                     opacity: 0; // Başlangıçta görünmez
                     transition: opacity 0.3s ease-in-out, transform 0.3s ease-in-out;
+
+                    &:hover{
+                        font-size: 16px;
+                        font-weight: bolder;
+                        transition: all ease-in .2s;
+                    }
                 }
 
                     &:hover {
