--- a/src/assets/scss/_styles.scss
+++ b/src/assets/scss/_styles.scss
@@ -164,42 +164,40 @@ body{
     text-align: center;
 
     .container{
-        @include flex();
+        @include flex($align:baseline);
         @include section($padding:2rem 5rem);
+        @include responsive($size:mobile){
+                flex-direction: column;
+                align-items: center;
+        }
+        @include responsive($size:tablet){
+                flex-direction: column;
+                align-items: center;
+        }
 
         .details{
             @include flex($gap:2rem, $direction:column);
-            text-align: center;
-            @include responsive($size:mobile){
-                flex-direction: column;
+
+        & button{
+            margin-top: 2rem;
         }
-        width: 40%;
-           
-            .education{
-                @include flex($direction:column,$gap:1rem);
-                width: 100%;
-                height: 130px;
-                border: 1px solid $light-gray;
-                box-shadow:0px 0px 5px rgba(255, 255, 0, 0.5);
-                padding: .5rem .7rem;
-                & span{
-                    color: $silver;
-                    font-style: italic;
-                }
+        
+        .detail{
+            @include flex($direction:column,$gap:1rem);
+    
+            .detail-header{
+            // display: inline-block; /* sadece yazı kadar çizgi */
+            display: block;
+            width: 300px; 
+            border-bottom: 3px solid $yellow;
             }
 
-            .experience{
-                @include flex($direction:column, $gap:1rem);
-                width: 100%;
-                height: 130px;
-                border: 1px solid $light-gray;
-                box-shadow:0px 0px 5px rgba(255, 255, 0, 0.5);
-                padding: .5rem .7rem;
-                & span{
-                    color: $silver;
-                    font-style: italic;
-                }
+            & span {
+                color: $silver;
+                font-style: italic;
             }
+        }
+
         }
 
         .about-text{
@@ -207,9 +205,16 @@ body{
             text-align: center;
             width: 60%;
             padding-top: 3rem;
+            @include responsive($size:mobile){
+            width: 100vw;
+        }
+        @include responsive($size:tablet){
+            width: 100vw;
+        }
+       
             p{
-                width: 60%;
-            }
+                width: 60%; 
+        }
         }
 
         }
@@ -217,6 +222,10 @@ body{
         .skills{
             @include flex($direction:column);
             margin: 3rem auto;
+
+            & > div {
+                cursor: default;
+            }
 
             .allskills{
                 @include flex($wrap:wrap);
@@ -360,6 +369,12 @@ body{
             width: 100%;
             .name , .email , .msg{
                 width: 45%;
+                @include responsive($size:mobile){
+                width: 100%;
+                }
+                @include responsive($size:tablet){
+                width: 100%;
+                }
                 font-size: medium;
                 margin: 0.5rem;
                 padding: 0.5rem 1rem;
